<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/ic_find_in_page_black"
            android:title="@string/title_jobs" />
        <item
            android:id="@+id/nav_curriculum"
            android:icon="@drawable/ic_fingerprint_black"
            android:title="@string/title_curriculum" />
        <item
            android:id="@+id/nav_selectiveProcesses"
            android:icon="@drawable/ic_event_black"
            android:title="@string/title_selectiveProcesses" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/visit_our_site" />
            <item
                android:id="@+id/nav_bug"
                android:icon="@drawable/ic_bug_report_black"
                android:title="@string/report_a_bug" />
        </menu>
    </item>

</menu>
