<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".MainActivity">
    <!--
      <item
           android:id="@+id/action_vehicle"
           android:icon="@drawable/ic_action_car"
           android:orderInCategory="100"
           android:title="@string/action_vehicle"
           app:showAsAction="ifRoom" />

      -->

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="99"
        android:title="@string/action_searh"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"

        />

    <item
        android:id="@+id/action_personal_data"
        android:icon="@drawable/ic_account_circle_white"
        android:orderInCategory="100"
        android:title="@string/action_personal_data"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact_developer"
        android:icon="@drawable/ic_action_contact_code"
        android:orderInCategory="102"
        android:title="@string/contact_developer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_contact_code"
        android:orderInCategory="103"
        android:title="@string/about"
        app:showAsAction="never" />


</menu>